# tftp

./: .travis.yml  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: lint.yml  test.yml
benchmarks/stress2/: Cargo.toml
benchmarks/stress2/src/: main.rs
dockerfiles/: Dockerfile
documentation/: wireshark.md
examples/: client.rs  server.rs  server_with_threads.rs
src/: bytes.rs  client.rs  connection.rs  lib.rs  server.rs  util.rs
src/packet/: ack.rs  bytes.rs  data.rs  error.rs  expect.rs  mod.rs  mode.rs  opcode.rs
src/packet/rq/: mod.rs  rrq.rs  wrq.rs
tests/: get.rs  put.rs  server.rs
