[package]
name = "tftp"
version = "0.1.0"
authors = ["Connor Kuehl <cipkuehl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.7.3"

[[example]]
name = "client"

[[example]]
name = "server"
