[package]
name = "tftp"
version = "0.1.0"
authors = ["Connor Kuehl <cipkuehl@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "connorkuehl/tftp", branch = "main" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

[dev-dependencies]
tempfile = "3.1.0"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "server_with_threads"
path = "examples/server_with_threads.rs"
